Fixed the icons getting over the scrollbar.

--- a/less/main.less
+++ b/less/main.less
@@ -3,12 +3,14 @@
 @green: #1baf4b;
 
 html {
-  position: fixed;
-  overflow: auto;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  @media (max-width: 768px) {
+    position: fixed;
+    overflow: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
 }
 
 body {
